# swagger.js
@@ -6,9 +6,9 @@ const doc = {
     description: 'API for managing contacts',
     version: '1.0.0'
   },
-  host: 'https://cse341-crud-project2-u5wz.onrender.com',
-  basePath: '/',
-  schemes: ['http']
+  host: 'cse341-crud-project2-u5wz.onrender.com',
+  basePath: '/contacts',
+  schemes: ['https']
 };
 
 const outputFile = './swagger.json';
