# swagger.json
@@ -5,11 +5,9 @@
     "description": "API for managing contacts and products",
     "version": "1.0.0"
   },
-  "host": "https://cse341-crud-project2-u5wz.onrender.com",
-  "basePath": "/",
-  "schemes": [
-    "http"
-  ],
+  "host": "cse341-crud-project2-u5wz.onrender.com",
+  "basePath": "/contacts",
+  "schemes": ["https"],
   "paths": {
     "/contacts": {
       "get": {
